--- a/.github/workflows/daily_alerts_prod.yml
+++ b/.github/workflows/daily_alerts_prod.yml
@@ -1,8 +1,8 @@
 name: Daily Alerts (Prod)
 
 on:
-  schedule:
-    - cron: '0 12 * * *'  # 9h BR (-3)
+  # schedule:
+  #   - cron: '0 12 * * *'  # 9h BR (-3)
   workflow_dispatch:
     inputs:
       group:
